@@ -3,10 +3,12 @@ package com.project.bookexplorer.catalog.application;
 import com.project.bookexplorer.catalog.application.port.CatalogUseCase;
 import com.project.bookexplorer.catalog.domain.Book;
 import com.project.bookexplorer.catalog.domain.CatalogRepository;
+import com.project.bookexplorer.uploads.application.port.UploadUseCase;
+import com.project.bookexplorer.uploads.application.port.UploadUseCase.SaveUploadCommand;
+import com.project.bookexplorer.uploads.domain.Upload;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -16,43 +18,56 @@ import java.util.stream.Collectors;
 class CatalogService implements CatalogUseCase {
 
     private final CatalogRepository repository;
+    private final UploadUseCase upload;
 
     public List<Book> findAll() {
         return repository.findAll();
     }
 
+    public Optional<Book> findById(Long id) {
+        return repository.findById(id);
+    }
+
     public List<Book> findByTitle(String title) {
         return repository.findAll()
                 .stream()
-                .filter(book -> book.getTitle().startsWith(title))
+                .filter(book -> book.getTitle().toLowerCase().contains(title.toLowerCase()))
                 .collect(Collectors.toList());
     }
 
     public Optional<Book> findOneByTitle(String title) {
         return repository.findAll()
                 .stream()
-                .filter(book -> book.getTitle().startsWith(title))
+                .filter(book -> book.getTitle().toLowerCase().contains(title.toLowerCase()))
                 .findFirst();
     }
 
     public List<Book> findByAuthor(String author) {
         return repository.findAll()
                 .stream()
-                .filter(book -> book.getAuthor().startsWith(author))
+                .filter(book -> book.getAuthor().toLowerCase().contains(author.toLowerCase()))
+                .collect(Collectors.toList());
+    }
+
+    public List<Book> findByTitleAndAuthor(String title, String author) {
+        return repository.findAll()
+                .stream()
+                .filter(book -> book.getTitle().toLowerCase().contains(title.toLowerCase()))
+                .filter(book -> book.getAuthor().toLowerCase().contains(author.toLowerCase()))
                 .collect(Collectors.toList());
     }
 
     public Optional<Book> findOneByTitleAndAuthor(String title, String author) {
         return repository.findAll()
                 .stream()
-                .filter(book -> book.getTitle().startsWith(title))
-                .filter(book -> book.getAuthor().startsWith(author))
+                .filter(book -> book.getTitle().toLowerCase().contains(title.toLowerCase()))
+                .filter(book -> book.getAuthor().toLowerCase().contains(author.toLowerCase()))
                 .findFirst();
     }
 
-    public void addBook(CreateBookCommand command) {
-        Book book =  command.toBook();
-        repository.save(book);
+    public Book addBook(CreateBookCommand command) {
+        Book book = command.toBook();
+        return repository.save(book);
     }
 
     public UpdateBookResponse updateBook(UpdateBookCommand command) {
@@ -63,7 +78,7 @@ class CatalogService implements CatalogUseCase {
                     repository.save(updatedBook);
                     return UpdateBookResponse.SUCCESS;
                 })
-                .orElseGet(() -> new UpdateBookResponse(false, Arrays.asList("Book not found with id: " + command.getId())));
+                .orElseGet(() -> new UpdateBookResponse(false, List.of("Book not found with id: " + command.getId())));
 
     }
 
@@ -71,5 +86,23 @@ class CatalogService implements CatalogUseCase {
         repository.removeById(id);
     }
 
+    public void updateBookCover(UpdateBookCoverCommand command) {
+        repository.findById(command.getId())
+                .ifPresent(book -> {
+                    Upload savedUpload = upload.save(new SaveUploadCommand(command.getFileName(), command.getFile(), command.getContentType()));
+                    book.setCoverId(savedUpload.getId());
+                    repository.save(book);
+                });
+    }
 
+    public void removeBookCover(Long id) {
+        repository.findById(id)
+                .ifPresent(book -> {
+                    if (book.getCoverId() != null) {
+                        upload.removeById(book.getCoverId());
+                        book.setCoverId(null);
+                        repository.save(book);
+                    }
+                });
+    }
 }
